* Stats frame work (thanks poy)
* Appearance page font cleanup (thanks poy)
* Context menu fix (thanks poy)
* Magnet dialog fixed (thanks poy)
* Reorder some options (thanks poy)
* Allow files with $ in them (thanks ullner)
* Fixed splitter resizing
* Fixed average download speed
* Removed test entries from finished frames
* Fixed an issue with multisource downloads


-- 0.702 2007-10-21 --
* Fixed missing sorting in most places
* Fixed crash on startup when missing Certificates folder
* Fixed right-click menu with nested user commands
* Added expiry check to certificate regeneration
* Readded splash screen
* Readded sfv check (always done at end of download due to segmented downloading)

-- 0.701 2007-10-18 --
* Fixed an upload bug
* Reworked some context menu stuff
* Replaced yassl with OpenSSL, SSL certs no longer require external OpenSSL application
* Added cipher column to transfer view
* Because certs are automagically generated, ADC transfers will now by default be encrypted if both
  clients use a recent version (see the cipher column to know)
* Fixed one of several possible crashes at exit

-- 0.700 2007-10-11 --
* [bug 1102] Fixed move/rename queue folder (thanks mikael eman)
* [bug 1124] Fixed thread shutdown on *nix (thanks mikael eman)
* Fixed invalid share size
* [bug 1127] Fixed crash on invalid file list (thanks steven sheehy)
* [bug 1019] Reworked initial filelist dir (thanks mikael eman)
* Moved to smartwin to enable mingw compiling (thanks cologic, ullner, poy)
* Removed notepad loading compatibility code for notepad texts from versions < 0.20
* Fixed time issues with DC++ running for more than 49 days
* [bug 980] Fixed PM's when popup is disabled (thanks ullner)
* [bug 1066] Search for alternates not available on uploads (thanks ullner)
* [bug 1104] Better error message on dupe source (thanks ullner)
* [bug 1132] Download queue updated when users go offline (thanks stephan hohe)
* [bug 1133] Fixed max tab rows being reset (thanks pothead)